force-app/main/default/objects/Country_Code__mdt/Country_Code__mdt.object-meta.xml
<CustomObject>
    <description>This metadata holds custom country codes, names, capital city and regions.</description>
    <label>Country Code</label>
    <pluralLabel>Country Codes</pluralLabel>
</CustomObject>