force-app/main/default/objects/Country_Code__mdt/fields/Alpha2Code__c.field-meta.xml
<CustomField>
    <fullName>Alpha2Code__c</fullName>
    <description>The ISO code of a country - length of 2</description>
    <label>Alpha2Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>