force-app/main/default/objects/Country_Code__mdt/fields/Alpha3Code__c.field-meta.xml
<CustomField>
    <fullName>Alpha3Code__c</fullName>
    <description>The ISO code of a country - length of 3</description>
    <label>Alpha3Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>