force-app/main/default/objects/Country_Code__mdt/fields/Capital__c.field-meta.xml
<CustomField>
    <fullName>Capital__c</fullName>
    <description>The name of the capital city.</description>
    <label>Capital</label>
    <length>255</length>
    <type>Text</type>
</CustomField>