force-app/main/default/objects/Country_Code__mdt/fields/HashCode__c.field-meta.xml
<CustomField>
    <fullName>HashCode__c</fullName>
    <description>The hashcode of this record computed from its DAO counterpart.</description>
    <label>HashCode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>