force-app/main/default/objects/Country_Code__mdt/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>The region of this country.</description>
    <label>Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>